# Backstage

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  cookiecutter.json  pyproject.toml  setup_packaging.py
.devcontainer/: .gitignore  Dockerfile  README.md  devcontainer.json
.github/workflows/: mirror-to-ado.yml
backstage/: app-config.yaml
conf/: app_config.json  infra_params.json  infra_params_SDXDEV.json
devops/: aip-infra-check-pipeline.yml  azure_pipelines.yml
docs/: .gitignore  DOCKER_SETUP.md
docs/source/: diagrams.md  index.rst  webapp.json
docs/source/product/: configuration.md  data.md  introduction.md  module_structure.md
docs/user-guide/: mkdocs.yml
docs/user-guide/docs/: index.md
docs/user-guide/docs/guides/: navigation-and-filters.md  self-service-bicep.md  self-service-repo.md  techdocs-cli-guide.md  usecase-documentation.md
docs/user-guide/javascripts/: extra.js
docs/user-guide/stylesheets/: extra.css
scripts/: install_requirements.sh  run_tests.sh
src/backstage/: .dockerignore  Dockerfile  TRIVY_SIMPLE_README.md  app-config.azurecontainerapp.yaml  app-config.production.yaml  app-config.sandbox.yaml  app-config.yaml  build-and-publish-docs.sh  build-docs-simple.sh  catalog-info.yaml  package.json  tsconfig.json  user_code_app.py  webpack.config.js
src/backstage/catalog-entities/: sonarcloud-aipcli-component.yaml
src/backstage/sodexo/: 4site-catalog.yaml  aip-catalog.yaml  aip-template.yaml  all.yaml  conditional-policies.yaml  guest-catalog.yaml  mcp-catalog.yaml  pag-catalog.yaml  powerchef-catalog.yaml  productswap-catalog.yaml  sonarcloud-catalog.yaml
src/backstage/sodexo/policies/: conditional-policies.yaml  rbac-policy.csv
src/backstage/sodexo/sdk-docs/: mkdocs.yml  techdocs-config.yaml
src/backstage/sodexo/sdk-docs/docs/: index.md  (+2 more)
src/backstage/sodexo/templates/: aip-infra-check-template.yaml  azure-bicep-template-api.yaml  azure-bicep-template.yaml  azure-patterns-template.yaml  azure-repo-template.yaml  azure-vm-template.yaml  azure-vm-workstation-template.yaml  deploy-webapp-template.yaml  infra-config-template.yaml  register-webapp-template.yaml
tests/: __init__.py
tests/backstage/: test_project_pt.py  test_project_ut.py
tests/resources/: test_resources.py
