[tool.poetry]
name = "backstage"
version = "0.1.0"
description = "This repository contains the source code for a backstage based developer portal"
authors = ["Sodexo Data Factory"]
readme = "README.md"
license = "LICENSE"
documentation = "https://aip.datalab.sodexo.com/"
repository = "https://sdxcloud.visualstudio.com/GLB.GLB.DataLab.AIPlatform/_git/GLB.GLB.DataLab.AIPlatform.Cookiecutter"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "backstage", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
aipcli-app = "1.3.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "PPP"
url = "https://sdxcloud.pkgs.visualstudio.com/_packaging/AIP-feed/pypi/simple/"
priority = "supplemental"

[tool.poetry.group.aip]
optional = true

[tool.poetry.group.aip.dependencies]
aipcli-core = "1.3.2"
aipcli-app = "1.3.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
