[project]
name = "backstage"
version = "0.0.0"
description = "This repository contains the source code for a backstage based developer portal"
authors = [{ name = "Sodexo Data Factory" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aipcli-app==1.4.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
documentation = "https://aip.datalab.sodexo.com/"
repository = "https://sdxcloud.visualstudio.com/GLB.GLB.DataLab.AIPlatform/_git/GLB.GLB.DataLab.AIPlatform.Cookiecutter"

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "PPP"
url = "https://sdxcloud.pkgs.visualstudio.com/_packaging/AIP-feed/pypi/simple/"
authenticate = "always"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
